Fix height of cards and spacing of menu icons

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -80,6 +80,11 @@ header.main
       .wrap
         padding: 5px 0px
         border-bottom: 3px solid transparent
+        span
+          &:nth-of-type(1)
+            width: initial
+            height: initial
+            padding-right: 6px
 
       &.is-active
         .wrap
